--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -1,183 +1,191 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Diva</string>
-    <string name="noConnection">No Internet Connection available.</string>
-    <string name="turnOnInternet">Turn On your Internet !!</string>
-    <string name="mobileData">Mobile data</string>
-    <string name="wifi">WIFI</string>
-    <string name="server_error">Sorry Server is facing some technical issues. please try after some time.</string>
+    <string name="app_name">ديفا</string>
+    <string name="noConnection">لا يوجد إتصال بالإنترنت</string>
+    <string name="turnOnInternet">الجهاز غير متصل بالإنترنت</string>
+    <string name="mobileData">البيانات الخلوية</string>
+    <string name="wifi">شبكة الإنترنت</string>
+    <string name="server_error">عذراً، يُرجى إعادة المحاولة لاحقاً.</string>
     <string name="arabic">العربية</string>
     <string name="english">English</string>
     <string name="keep_smiling_and_stay_healthy"><![CDATA[Keep Smiling & Stay Healthy]]></string>
-    <string name="enter_your_mobile_no">Enter your \nmobile number</string>
-    <string name="you_will_receive_4_digit_code_to_verify_next">You\'ll receive a 4 digit code to verify next.</string>
-    <string name="next">Next</string>
-    <string name="mobile_no_required">Please Enter Your mobile number to continue.</string>
-    <string name="invalid_mobile">Invalid Mobile number</string>
-    <string name="enter_code_sent_to_your_number">Enter code sent \nto your number</string>
-    <string name="we_sent_it_to_the_number">We sent it to the number [x]</string>
-    <string name="dint_receive_the_otp">Didn\'t receive the otp?</string>
-    <string name="resend_otp">Resend Otp</string>
-    <string name="enter_your_name">Enter your name</string>
-    <string name="age">Age</string>
-    <string name="height">Height</string>
-    <string name="weight">Weight</string>
-    <string name="continue_">Continue</string>
-    <string name="about_you">About you</string>
-    <string name="top_personal_trainers">Top Personal Trainers</string>
-    <string name="view_all">View All</string>
-    <string name="book">Book</string>
-    <string name="home">Home</string>
-    <string name="membership">Membership</string>
-    <string name="workout">Workout</string>
-    <string name="diet">Diet</string>
-    <string name="sar">SAR </string>
-    <string name="for_package">for</string>
-    <string name="enable_your_location">Enable Your Location</string>
-    <string name="ok">Ok</string>
-    <string name="no">No</string>
-    <string name="yes">Yes</string>
-    <string name="youAreNotUpdatedMessage">A new version is available .Please update to version <b><u><i>[x]</i></u></b>.</string>
-    <string name="youAreNotUpdatedTitle">Update Available</string>
-    <string name="update">Update</string>
+    <string name="enter_your_mobile_no">أدخل \nرقم جوالك</string>
+    <string name="you_will_receive_4_digit_code_to_verify_next">وسيتم إرسال رمز التفعيل المكون من 4 أرقام</string>
+    <string name="next">التالي</string>
+    <string name="mobile_no_required">يُرجى إدخال رقم الجوال للمتابعة.</string>
+    <string name="invalid_mobile">رقم الجوال غير صحيح</string>
+    <string name="enter_code_sent_to_your_number">أدخل رمز التفعيل \nالمُرسل لجوالك</string>
+    <string name="we_sent_it_to_the_number">تم الإرسال للرقم [x]</string>
+    <string name="dint_receive_the_otp">لم يصلك؟</string>
+    <string name="resend_otp">إعادة الإرسال</string>
+    <string name="enter_your_name">الإسم</string>
+    <string name="age">العُمر</string>
+    <string name="height">الطول</string>
+    <string name="weight">الوزن</string>
+    <string name="continue_">إستمرار</string>
+    <string name="about_you">بياناتك</string>
+    <string name="top_personal_trainers">أفضل المدربات</string>
+    <string name="view_all">مشاهدة الكل</string>
+    <string name="book">حجز</string>
+    <string name="home">الرئيسية</string>
+    <string name="membership">حسابي</string>
+    <string name="workout">التمارين</string>
+    <string name="diet">النظام الغذائي</string>
+    <string name="sar">ر.س </string>
+    <string name="for_package">لمدة</string>
+    <string name="enable_your_location">السماح بتحديد الموقع</string>
+    <string name="ok">حسناً</string>
+    <string name="no">لا</string>
+    <string name="yes">نعم</string>
+    <string name="youAreNotUpdatedMessage">النسخة الجديدة متاحة الآن, يُرجى التحديث. <b><u><i>[x]</i></u></b>.</string>
+    <string name="youAreNotUpdatedTitle">تحديث جديد</string>
+    <string name="update">تحديث</string>
 
-    <string name="min_age">18 years</string>
-    <string name="max_age">65 years</string>
+    <string name="min_age">16 سنة</string>
+    <string name="max_age">65 سنة</string>
 
-    <string name="min_height">50cm</string>
-    <string name="max_height">150cm</string>
+    <string name="min_height">50 سم</string>
+    <string name="max_height">250 سم</string>
 
-    <string name="min_weight">30kg</string>
-    <string name="max_weight">200kg</string>
+    <string name="min_weight">20 كجم</string>
+    <string name="max_weight">200 كجم</string>
 
-    <string name="years">years</string>
-    <string name="cm">cm</string>
-    <string name="kg">kg</string>
+    <string name="years">سنة</string>
+    <string name="cm">سم</string>
+    <string name="kg">كجم</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="our_fitness_center">Our Fitness Center</string>
-    <string name="buy_membership">Buy Membership</string>
-    <string name="my_schedules">My Schedules</string>
-    <string name="cals_left">Cals Left</string>
-    <string name="consumed">Consumed</string>
-    <string name="proteins">Proteins</string>
-    <string name="carbs">Carbs</string>
-    <string name="fats">Fats</string>
-    <string name="calories">Calories</string>
-    <string name="today_diet_plan">Today\'s Diet Plan</string>
-    <string name="today_workout">Today\'s Workout</string>
-    <string name="your_membership_has_been_expired">Your Membership has been expired.</string>
-    <string name="renew_plan">Renew Plan</string>
-    <string name="my_profile">My Profile</string>
-    <string name="change_diet_plan">Change Diet Plan</string>
-    <string name="change_workout_plan">Change Workout Plan</string>
-    <string name="payment_history">Payment History</string>
-    <string name="share_app">Share App</string>
-    <string name="rate_app">Rate app</string>
-    <string name="customer_support">Customer Support</string>
-    <string name="about_app">About App</string>
-    <string name="logout">Logout</string>
-    <string name="sar_amount">SAR [X]/session</string>
-    <string name="pay_sar">Pay SAR [X]</string>
-    <string name="skip">skip</string>
-    <string name="edit_profile">Edit Profile</string>
-    <string name="pick_image_from">Pick Image From</string>
-    <string name="gallery">Gallery</string>
-    <string name="camera">Camera</string>
-    <string name="notification">Notification</string>
+    <string name="our_fitness_center">فروعنا</string>
+    <string name="buy_membership">إشتراك</string>
+    <string name="my_schedules">الإحصائيات</string>
+    <string name="cals_left">السعرات المتبقية</string>
+    <string name="consumed">المستهلكة</string>
+    <string name="proteins">البروتين</string>
+    <string name="carbs">الكربوهيدرات</string>
+    <string name="fats">الدهون</string>
+    <string name="calories">السعرات الحرارية</string>
+    <string name="today_diet_plan">النظام الغذائي اليوم</string>
+    <string name="today_workout">تمارين اليوم</string>
+    <string name="your_membership_has_been_expired">تم إنتهاء صلاحية الإشتراك في</string>
+    <string name="renew_plan">تجديد الخطة</string>
+    <string name="my_profile">بياناتي</string>
+    <string name="change_diet_plan">تغيير النظام الغذائي</string>
+    <string name="change_workout_plan">تغيير التمارين</string>
+    <string name="payment_history">سجل الدفع</string>
+    <string name="share_app">مشاركة التطبيق</string>
+    <string name="rate_app">تقييم التطبيق</string>
+    <string name="customer_support">الدعم والمساعدة</string>
+    <string name="about_app">عن التطبيق</string>
+    <string name="logout">تسجيل الخروج</string>
+    <string name="sar_amount">[X] ر.س/الحصة</string>
+    <string name="pay_sar">دفع [X] ر.س</string>
+    <string name="skip">تخطي</string>
+    <string name="edit_profile">تعديل البيانات</string>
+    <string name="pick_image_from">حدد مصدر الصورة</string>
+    <string name="gallery">المعرض</string>
+    <string name="camera">الكاميرا</string>
+    <string name="notification">الإشعارات</string>
     <string name="you_have_unread_notifications"><![CDATA["  <string name=\"you_have_unread_notifications\">You have {number} unread notifications.</string>"]]></string>
-    <string name="clear_all">Clear All</string>
-    <string name="no_notification_found">No Notification Found</string>
-    <string name="my_diet_plan">My Diet Plan</string>
-    <string name="no_diet_plan_created">No Diet Plan Created</string>
-    <string name="create_plan">Create Plan</string>
-    <string name="add">Add</string>
-    <string name="create_diet_plan">Create Diet Plan</string>
-    <string name="view">View</string>
-    <string name="hey_name">Hey, [x]</string>
-    <string name="welcome_to_diva_fitness">Welcome to Diva Fitness</string>
-    <string name="no_diet_available">No Diet Plan Available</string>
-    <string name="save">Save</string>
-    <string name="edit_diet_plan">Edit Diet Plan</string>
-    <string name="personal_trainers">Personal Trainers</string>
-    <string name="search_by_name">Search by name</string>
-    <string name="no_trainer_avl">No Trainer available</string>
-    <string name="filter">Filter</string>
-    <string name="select_center">Select Center</string>
-    <string name="apply_filter">Apply</string>
-    <string name="clear_filter">Clear Filter</string>
-    <string name="type_message">Type message</string>
-    <string name="specialising_in">Specialising in</string>
-    <string name="select_tenure">Select Tenure</string>
-    <string name="packages">Package</string>
-    <string name="per_session">Per Session</string>
-    <string name="read_policy">Read Policy</string>
-    <string name="only_me">Only Me</string>
-    <string name="with_my_friends">With My Friends</string>
-    <string name="no_of_people">No of people</string>
-    <string name="about_trainer">About Trainer</string>
-    <string name="i_will_join_from">I will join from</string>
-    <string name="select_slots">Select Slots</string>
-    <string name="month">Month</string>
-    <string name="selected">Selected</string>
-    <string name="no_of_session">No. of session</string>
-    <string name="confirm">Confirm</string>
-    <string name="selected_slots">Selected Slots</string>
-    <string name="booking_summary">Booking Summary</string>
-    <string name="tenure">Tenure</string>
-    <string name="joining_from">Joining from</string>
-    <string name="remove">Remove</string>
-    <string name="personal_trainer">Personal Trainer</string>
-    <string name="payable_amt">Payable Amount</string>
-    <string name="auto_renew_membership">Auto Renew membership</string>
+    <string name="clear_all">مسح</string>
+    <string name="no_notification_found">لا يوجد إشعارات</string>
+    <string name="my_diet_plan">خطة النظام الغذائي</string>
+    <string name="no_diet_plan_created">لا يوجد نظام غذائي</string>
+    <string name="create_plan">إنشاء خطة</string>
+    <string name="add">إضافة</string>
+    <string name="create_diet_plan">إنشاء خطة</string>
+    <string name="view">معاينة</string>
+    <string name="hey_name">أهلاً, [x]</string>
+    <string name="welcome_to_diva_fitness">أهلاً بكم في مركز ديفا فيتنس</string>
+    <string name="no_diet_available">لا يوجد نظام غذائي</string>
+    <string name="save">حفظ</string>
+    <string name="edit_diet_plan">تعديل خطة النظام الغذائي</string>
+    <string name="personal_trainers">المدربات</string>
+    <string name="search_by_name">البحث</string>
+    <string name="no_trainer_avl">لا يوجد مدربات</string>
+    <string name="filter">تصفية</string>
+    <string name="select_center">تحديد المركز</string>
+    <string name="apply_filter">تطبيق</string>
+    <string name="clear_filter">مسح</string>
+    <string name="type_message">الرسالة</string>
+    <string name="specialising_in">التخصصات</string>
+    <string name="select_tenure">حددي المدة</string>
+    <string name="packages">الباقة</string>
+    <string name="per_session">لكل حصة</string>
+    <string name="read_policy">قراءة السياسة</string>
+    <string name="only_me">أنا فقط</string>
+    <string name="with_my_friends">مع أصدقائي</string>
+    <string name="no_of_people">عدد المشتركات</string>
+    <string name="about_trainer">عن المدربة</string>
+    <string name="i_will_join_from">سوف أنضم من</string>
+    <string name="select_slots">تحديد الحصص</string>
+    <string name="month">شهر</string>
+    <string name="selected">المحددة</string>
+    <string name="no_of_session">عدد الحصص</string>
+    <string name="confirm">تأكيد</string>
+    <string name="selected_slots">الحصص المحددة</string>
+    <string name="booking_summary">ملخص الحجز</string>
+    <string name="tenure">المدة</string>
+    <string name="joining_from">تاريخ البدء</string>
+    <string name="remove">إزالة</string>
+    <string name="personal_trainer">المدربة الشخصية</string>
+    <string name="payable_amt">المبلغ المستحق</string>
+    <string name="auto_renew_membership">تجديد تلقائي للإشتراك</string>
     <string name="package_membership">Plus [X] package</string>
-    <string name="please_select_slots">Please select slots</string>
-    <string name="booking_successfully">Booking Successfully!</string>
-    <string name="your_booking_confirm">Your booking has been confirm</string>
-    <string name="my_booking">My Bookings</string>
-    <string name="back_to_home">Back to home</string>
-    <string name="select_branch">Select Branch</string>
-    <string name="i_need_personal_trainer">I need Personal Trainer</string>
-    <string name="choose_center">Choose the Center</string>
-    <string name="vat">VAT</string>
-    <string name="people">People</string>
-    <string name="session">Session</string>
-    <string name="upcoming">Upcoming</string>
-    <string name="completed">Completed</string>
-    <string name="no_membership_avl">No Membership Available</string>
-    <string name="book_now">Book Now</string>
-    <string name="booking_id">Booking ID #</string>
-    <string name="cancel_pt">Cancel PT</string>
-    <string name="booking_date">Booking Date:</string>
-    <string name="paid">Paid</string>
-    <string name="discount">Discount</string>
-    <string name="view_direction">View Direction</string>
-    <string name="download_invoice">Download invoice</string>
-    <string name="rate_now">Rate Now</string>
-    <string name="please_buy_membership">Please Buy Membership</string>
-    <string name="please_buy_membership_des">Please buy membership for booking with any personal trainer</string>
-    <string name="selected_center">Selected Center</string>
-    <string name="no_completed_booking">No Completed Booking</string>
-    <string name="date">Date:</string>
-    <string name="payment_method">Payment Method:</string>
-    <string name="mode">Mode:</string>
-    <string name="my_workout_plan">My Workout</string>
-    <string name="no_workout_created">No Workout Created</string>
-    <string name="create_workout">Create Workout</string>
-    <string name="edit_workout_plan">Edit Workout Plan</string>
-    <string name="no_workout_available">No Workout Available</string>
-    <string name="create_workout_plan">Create Workout Plan</string>
-    <string name="day_rest">Day Rest</string>
-    <string name="reps">Reps</string>
-    <string name="set">Set</string>
-    <string name="burns">Burns</string>
-    <string name="select_slot">[X] Slots</string>
-    <string name="g">g</string>
-    <string name="on_rest">On Rest</string>
-    <string name="am_on_rest">I am on rest!</string>
-    <string name="please_add_diet">Please add Diet</string>
+    <string name="please_select_slots">يُرجى تحديد الحصص</string>
+    <string name="booking_successfully">تم الحجز بنجاح!</string>
+    <string name="your_booking_confirm">تم تأكيد الحجز</string>
+    <string name="my_booking">حجوزاتي</string>
+    <string name="back_to_home">العودة للرئيسية</string>
+    <string name="select_branch">تحديد الفرع</string>
+    <string name="i_need_personal_trainer">أحتاج إلى مدربة شخصية</string>
+    <string name="choose_center">تحديد النادي</string>
+    <string name="vat">الضريبة</string>
+    <string name="people">المشتركات</string>
+    <string name="session">الحصة</string>
+    <string name="upcoming">القادمة</string>
+    <string name="completed">المكتملة</string>
+    <string name="no_membership_avl">لا يوجد إشتراك</string>
+    <string name="book_now">حجز</string>
+    <string name="booking_id">رمز الحجز #</string>
+    <string name="cancel_pt">إلغاء التدريب الشخصي</string>
+    <string name="booking_date">تاريخ الحجز:</string>
+    <string name="paid">مدفوع</string>
+    <string name="discount">الخصم</string>
+    <string name="view_direction">عرض الإتجاهات</string>
+    <string name="download_invoice">تحميل الفاتورة</string>
+    <string name="rate_now">تقييم</string>
+    <string name="please_buy_membership">يُرجى الإشتراك</string>
+    <string name="please_buy_membership_des">يُرجى الإشتراك للحجز مع أي مدربة شخصية</string>
+    <string name="selected_center">المركز المحدد</string>
+    <string name="no_completed_booking">لا يوجد حجز مكتمل</string>
+    <string name="date">التاريخ:</string>
+    <string name="payment_method">طريقة الدفع:</string>
+    <string name="mode">طريقة الدفع:</string>
+    <string name="my_workout_plan">تماريني</string>
+    <string name="no_workout_created">لا يوجد تمارين</string>
+    <string name="create_workout">إضافة تمرين</string>
+    <string name="edit_workout_plan">تعديل خطة التمرين</string>
+    <string name="no_workout_available">لا يوجد تمارين</string>
+    <string name="create_workout_plan">إنشاء خطة تمرين</string>
+    <string name="day_rest">يوم راحة"</string>
+    <string name="reps">التكرار</string>
+    <string name="set">المجموعة</string>
+    <string name="burns">سعرة</string>
+    <string name="select_slot">[X] حصة</string>
+    <string name="g">جم</string>
+    <string name="on_rest">راحة</string>
+    <string name="am_on_rest">أنا في راحة!</string>
+    <string name="please_add_diet">يُرجى إضافة النظام الغذائي</string>
+    <string name="submit_review">إرسال</string>
+    <string name="title">العنوان</string>
+    <string name="message">الرسالة</string>
+    <string name="poweredby_htf">تصميم وبرمجة</string>
+
+    <string name="please_enter_title">Please enter title</string>
+    <string name="please_enter_msg">Please enter message</string>
+    <string name="privacy_policy">Privacy Policy</string>
 
 
 </resources>
