--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -186,6 +186,8 @@
     <string name="please_enter_title">Please enter title</string>
     <string name="please_enter_msg">Please enter message</string>
     <string name="privacy_policy">Privacy Policy</string>
+    <string name="please_rate_this_booking">Please rate the booking</string>
+    <string name="quantity">Quantity:</string>
 
 
 </resources>
