--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -188,6 +188,11 @@
     <string name="privacy_policy">Privacy Policy</string>
     <string name="please_rate_this_booking">Please rate the booking</string>
     <string name="quantity">Quantity:</string>
+    <string name="contact_us">Contact Us</string>
+    <string name="submit">Submit</string>
+    <string name="name">Name</string>
+    <string name="mobile_number">Mobile Number</string>
+    <string name="login">Login</string>
 
 
 </resources>
