--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -206,6 +206,9 @@
     <string name="review">Review</string>
     <string name="feets">Feets</string>
     <string name="you_already_have_membership">You already have a membership</string>
+    <string name="number_picker_formatter">%02d</string>
+    <string name="select_repetition">Select Repetition</string>
+    <string name="select_sets">Select Sets</string>
 
 
 </resources>
